--- a/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj
+++ b/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="regressieBoom.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
