Added organ struct

--- a/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj
+++ b/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj
@@ -122,6 +122,9 @@
     <None Include="tree_gen\RegressionTree.ipynb" />
     <None Include="tree_gen\rules.json" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="organ.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
