--- a/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj.filters
+++ b/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj.filters
@@ -33,4 +33,9 @@
       <Filter>Python Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="organ.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
