--- a/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj.filters
+++ b/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="evaluation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="organ.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="tree_gen\rules.json">
