Consolidated all types of errors into std::exception

--- a/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj
+++ b/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj
@@ -125,6 +125,7 @@
     <None Include="tree_gen\auxiliaryFunctions.py" />
     <None Include="tree_gen\RegressionTree.ipynb" />
     <None Include="tree_gen\rules.json" />
+    <None Include="tree_gen\rules_bad.json" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="evaluation.h" />
