--- a/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj.filters
+++ b/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj.filters
@@ -44,7 +44,9 @@
     <None Include="tree_gen\auxiliaryFunctions.py">
       <Filter>Python Files</Filter>
     </None>
-    <None Include="tree_gen\rules_bad.json" />
+    <None Include="tree_gen\rules_bad.json">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="organ.h">
