Time in differnt depths

--- a/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj.filters
+++ b/Project1_RegressieBoom/Project1_RegressieBoom.vcxproj.filters
@@ -47,11 +47,21 @@
     <None Include="tree_gen\rules_bad.json">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="tree_gen\rules_d1.json" />
-    <None Include="tree_gen\rules_d2.json" />
-    <None Include="tree_gen\rules_d3.json" />
-    <None Include="tree_gen\rules_d4.json" />
-    <None Include="tree_gen\rules_d5.json" />
+    <None Include="tree_gen\rules_d1.json">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="tree_gen\rules_d2.json">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="tree_gen\rules_d3.json">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="tree_gen\rules_d4.json">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="tree_gen\rules_d5.json">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="organ.h">
